; ModuleID = '/home/carl/AnghaBench/git/extr_tree-diff.c_diff_tree_oid.c'
source_filename = "/home/carl/AnghaBench/git/extr_tree-diff.c_diff_tree_oid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.diff_options = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.strbuf = type { i32 }

@PATH_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @diff_tree_oid(%struct.object_id* %0, %struct.object_id* %1, i8* %2, %struct.diff_options* %3) #0 {
  %5 = alloca %struct.object_id*, align 8
  %6 = alloca %struct.object_id*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.diff_options*, align 8
  %9 = alloca %struct.strbuf, align 4
  %10 = alloca i32, align 4
  store %struct.object_id* %0, %struct.object_id** %5, align 8
  store %struct.object_id* %1, %struct.object_id** %6, align 8
  store i8* %2, i8** %7, align 8
  store %struct.diff_options* %3, %struct.diff_options** %8, align 8
  %11 = load i32, i32* @PATH_MAX, align 4
  %12 = call i32 @strbuf_init(%struct.strbuf* %9, i32 %11)
  %13 = load i8*, i8** %7, align 8
  %14 = call i32 @strbuf_addstr(%struct.strbuf* %9, i8* %13)
  %15 = load %struct.object_id*, %struct.object_id** %5, align 8
  %16 = load %struct.object_id*, %struct.object_id** %6, align 8
  %17 = load %struct.diff_options*, %struct.diff_options** %8, align 8
  %18 = call i32 @ll_diff_tree_oid(%struct.object_id* %15, %struct.object_id* %16, %struct.strbuf* %9, %struct.diff_options* %17)
  store i32 %18, i32* %10, align 4
  %19 = load i8*, i8** %7, align 8
  %20 = load i8, i8* %19, align 1
  %21 = icmp ne i8 %20, 0
  br i1 %21, label %36, label %22

22:                                               ; preds = %4
  %23 = load %struct.diff_options*, %struct.diff_options** %8, align 8
  %24 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %36

28:                                               ; preds = %22
  %29 = call i64 (...) @diff_might_be_rename()
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %36

31:                                               ; preds = %28
  %32 = load %struct.object_id*, %struct.object_id** %5, align 8
  %33 = load %struct.object_id*, %struct.object_id** %6, align 8
  %34 = load %struct.diff_options*, %struct.diff_options** %8, align 8
  %35 = call i32 @try_to_follow_renames(%struct.object_id* %32, %struct.object_id* %33, %struct.strbuf* %9, %struct.diff_options* %34)
  br label %36

36:                                               ; preds = %31, %28, %22, %4
  %37 = call i32 @strbuf_release(%struct.strbuf* %9)
  %38 = load i32, i32* %10, align 4
  ret i32 %38
}

declare dso_local i32 @strbuf_init(%struct.strbuf*, i32) #1

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i8*) #1

declare dso_local i32 @ll_diff_tree_oid(%struct.object_id*, %struct.object_id*, %struct.strbuf*, %struct.diff_options*) #1

declare dso_local i64 @diff_might_be_rename(...) #1

declare dso_local i32 @try_to_follow_renames(%struct.object_id*, %struct.object_id*, %struct.strbuf*, %struct.diff_options*) #1

declare dso_local i32 @strbuf_release(%struct.strbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
